fix: footer padding bottom to avoid overflow projects Nav

--- a/components/Footer/footer.scss
+++ b/components/Footer/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: #F2F2F2;
-  padding: 36px 0;
+  padding: 36px 0 120px;
 
   &__wrapper {
     display: flex;
